Refactoring on persistence, serializer, configuration, logic, logic util and model plus lobby.js and lobby.jsp